2008-02-29  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed "Bug 365840 -
	  Editor should have the focus after switching documents".

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed "Bug 365453 -
	  Exception when attempting to save newly created file (not as part of a
	  project)".

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Fixed "Bug 365624 - Widget
	  toolbox are shown unsorted".

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
	  gtk-gui/MonoDevelop.SourceEditor.SourceEditorWidget.cs,
	  gtk-gui/gui.stetic, MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs: Worked on
	  search&replace. (Bug 365439 - Replace usability issues)

2008-02-28  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed Bug 365570 - Crash
	  in the editor

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on category support
	  for the toolbox service.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Automatically unfold
	  regions when you jump to them.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/gui.stetic, MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	  Refactored status bar.

2008-02-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Worked on undo.

2008-02-23  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: No longer setting caret
	  position on right click on selection.
