@@ -1,5 +1,12 @@
 2008-02-29  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.SourceEditor/ExtendibleTextEditor.cs,
+	  MonoDevelop.SourceEditor/MarkerOperationsHandler.cs: Text editor now
+	  reacts on context sensitive menus display (Shift+F10) and  Ctrl+F1 shows
+	  the tooltip.
+
+2008-02-29  Mike Krüger <mkrueger@novell.com> 
+
 	* gtk-gui/MonoDevelop.SourceEditor.SearchAndReplaceWidget.cs,
 	  gtk-gui/MonoDevelop.SourceEditor.SourceEditorWidget.cs,
 	  MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed "Bug 365840 -
